--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>)"></div>
+      <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>)">
+        <img src="" alt="">
+      </div>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -36,9 +38,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input type="text"  id="name-input" name="name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required pattern="^[a-zA-Zа-яА-ЯёЁ\- ]+$" data-error-message="Разрешены символы латиницы, кириллицы, знаки дефиса и пробелы.">
+        <span class="popup__error_visible name-input-error"></span>
+        <input type="text" id="description-input" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" minlength="2" maxlength="200"required pattern="^[a-zA-Zа-яА-ЯёЁ\- ]+$" data-error-message="Разрешены символы латиницы, кириллицы, знаки дефиса и пробелы.">
+        <span class="popup__error_visible description-input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -47,9 +51,11 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new-place" novalidate>
+        <input type="text" id="place-input" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required minlength="2" maxlength="30" required pattern="^[a-zA-Zа-яА-ЯёЁ\- ]+$" data-error-message="Разрешены символы латиницы, кириллицы, знаки дефиса и пробелы.">
+        <span class="popup__error_visible place-input-error"></span>
+        <input type="url" id="link-input" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <span class="popup__error_visible link-input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -61,6 +67,19 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+  <div class="popup popup_type_avatar popup_is-animated"> 
+    <div class="popup__content"> 
+    <button type="button" class="popup__close"></button> 
+    <h3 class="popup__title">Загрузите новый аватар:</h3> 
+    <form class="popup__form" name="profile-avatar" novalidate> 
+    <input type="url" id="avatar-input" name="avatar-link" class="popup__input popup__input_type_avatar"  placeholder="Ссылка на аватар" required /> 
+    <span class="popup__error_visible avatar-input-error"></span> 
+    <button type="submit" class="button popup__button"> 
+    Сохранить 
+    </button> 
+    </form> 
+    </div> 
+    </div>
 </div>
 <template id="card-template">
   <li class="places__item card">
@@ -70,6 +89,7 @@
       <h2 class="card__title">
       </h2>
       <button type="button" class="card__like-button"></button>
+      <span class="card__like-count">0</span>
     </div>
   </li>
 </template>
